Fixed flicker in bottom of rooms sidebar when resizing.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -189,11 +189,12 @@ body.logged-out
   position fixed
   box-sizing border-box
   width room-sidebar-width
+  height 100%
+  background-color #313947
 
 .rooms-list
   box-sizing border-box
   width room-sidebar-width
-  background-color #313947
   overflow auto // Scrollable.
 
 .room-list-item
